--- a/Client/package.json
+++ b/Client/package.json
@@ -1,7 +1,8 @@
 {
   "name": "contact-circle",
   "description": "An simple contact app the list your contacts by the closeness of the people.",
-  "version": "1.0",
+  "version": "1.0.0",
+  "author": "Rejwan Islam Rizvy (RIR360)",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
