--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
   "author": "Rejwan Islam Rizvy (RIR360)",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "pm2": "^5.3.0"
