--- a/Server/package.json
+++ b/Server/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "pm2": "^5.3.0"
+    "pm2": "^5.3.0",
+    "uuid": "^9.0.1"
   }
 }
