--- a/Server/.env
+++ b/Server/.env
@@ -1,3 +1,3 @@
 PORT=3001
-MONGO_URI=mongodb://{username}:{password}@{host}:{port}/$databaseName}
+MONGO_URI=mongodb://{username}:{password}@{host}:{port}/{databaseName}
 KEY=jlksdjfiuqweroi70423oiusaofjlwuroiqwurouwerasfoiquwe09hsfbh
